# auto_landing

./: .gitmodules  README.md
aruco_ros/aruco/include/aruco/: arucofidmarkers.h
aruco_ros/aruco/src/aruco/: arucofidmarkers.cpp  markerdetector.cpp
aruco_ros/aruco_ros/launch/: double.launch  logitech_camera_aruco_image_view.launch  ugvc_record.launch  usb_camera_aruco.launch  usb_camera_aruco_image_view.launch  usb_camera_aruco_rosbag.launch  usb_camera_only_for_publish_camera_info.launch
aruco_ros/aruco_ros/src/: simple_single.cpp
px4_offboard_velocity_control/: CMakeLists.txt  package.xml
px4_offboard_velocity_control/src/: #px4_offboard_velocity_control_node.cpp#  px4_offboard_velocity_control_node.cpp
px4_velocity_control_node/: CMakeLists.txt
px4_velocity_control_node/launch/: px4_velocity_control.launch
px4_velocity_control_node/src/: px4_velocity_control_node.cpp
